# NdkLearn

./: JNI开发.xmind  readme.md  settings.gradle
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DataBean.h  Register.cpp  Register.h  native-lib.cpp  test.h
app/src/main/java/com/zxp/ndklearn/: MainActivity.java
app/src/main/java/com/zxp/ndklearn/bean/: DataBean.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
